rendered/envs/alpha/librespeed/deployment-librespeed.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    a8r.io/repository: https://github.com/Zebradil/myks-homelab
  name: librespeed
spec:
  selector:
    matchLabels:
      app: librespeed
  template:
    metadata:
      labels:
        app: librespeed
    spec:
      containers:
        - env:
            - name: PASSWORD
              valueFrom:
                secretKeyRef:
                  key: password
                  name: librespeed
          image: index.docker.io/linuxserver/librespeed@sha256:5e7ba354832be35ed2638f58ff035e101c6494d7282a2cf88aa180545d7fd58c
          name: librespeed
          ports:
            - containerPort: 80
              name: http
          resources:
            limits:
              memory: 256Mi
            requests:
              cpu: 10m
              memory: 64Mi
