rendered/envs/alpha/librespeed/service-librespeed.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    a8r.io/repository: https://github.com/Zebradil/myks-homelab
  name: librespeed
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app: librespeed
