rendered/envs/alpha/librespeed/ingressroute-librespeed-lan.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    a8r.io/repository: https://github.com/Zebradil/myks-homelab
  name: librespeed-lan
spec:
  entryPoints:
    - lan-web
    - lan-websecure
  routes:
    - kind: Rule
      match: Host(`librespeed.lan.zebradil.dev`) || Host(`librespeed.junior.lan.zebradil.dev`) || Host(`librespeed.zebradil.dev`) || Host(`librespeed.junior.zebradil.dev`)
      services:
        - name: librespeed
          port: http
