rendered/envs/alpha/librespeed/ingressroute-librespeed-vpn.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    a8r.io/repository: https://github.com/Zebradil/myks-homelab
  name: librespeed-vpn
spec:
  entryPoints:
    - vpn-web
    - vpn-websecure
  routes:
    - kind: Rule
      match: Host(`librespeed.ts.zebradil.dev`) || Host(`librespeed.junior.ts.zebradil.dev`)
      services:
        - name: librespeed
          port: http
