rendered/envs/alpha/librespeed/ingressroute-librespeed.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    a8r.io/repository: https://github.com/Zebradil/myks-homelab
  name: librespeed
spec:
  routes:
    - kind: Rule
      match: Host(`librespeed.junior.zebradil.dev`)
      middlewares:
        - name: chain-authelia-auth
          namespace: authelia
      services:
        - name: librespeed
          port: http
